--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,13 @@
-Options -Multiviews
-RewriteEngine On
-RewriteBase /
-
-#Remove .html extension
-RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
-RewriteRule ^ %1/ [NC,L,R]
-
+RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^/]+)/?$ $1.html [NC,L]
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^(.*)$ $1.html [NC,L]
+## Force https and www
+RewriteCond %{HTTPS} off [OR]
+RewriteCond %{HTTP_HOST} !^www\.example\.com$ [NC]
+RewriteRule ^(.*)$ https://www.example.com/$1 [L,R=301]
+
+## Remove trailing slash if not directory
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} (.+)/$
+RewriteRule ^(.*)/$ https://www.example.com/$1 [R=301,L]
