--- a/.htaccess
+++ b/.htaccess
@@ -2,12 +2,8 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html [NC,L]
-## Force https and www
-RewriteCond %{HTTPS} off [OR]
-RewriteCond %{HTTP_HOST} !^www\.example\.com$ [NC]
-RewriteRule ^(.*)$ https://www.example.com/$1 [L,R=301]
-
 ## Remove trailing slash if not directory
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} (.+)/$
-RewriteRule ^(.*)/$ https://www.example.com/$1 [R=301,L]
+RewriteRule ^(.*)/$ https://junayedrahaman50.github.io/$1 [R=301,L]
+
